# blog

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  bun.lockb  deno.json  package.json  pnpm-lock.yaml  pyproject.toml  run.sh  svelte.config.js  svelte.config.ts  tailwind.config.js  vite.config.ts  wrangler.toml
.github/: copilot-instructions.md
.github/instructions/: code-guidelines.instructions.md
.github/workflows/: deploy.yaml
.obsidian/: app.json  workspace.json
AI Browsers/: content.md
Hello World/: content.md
Introduction to Interpreters/: content.md
Introduction to Interpreters 2/: content.md
Learning Python/: content.md
MCP Protocol/: content.md
My relationship with Writing/: content.md
Procedural Generation/: content.md
Starting new things/: content.md
content/posts/: hello-world.md  learning-python.md  metaprogramming.md
content/posts/first-post/: index.md  meta.toml
posts/: Hello World.md  Introduction to Interpreters.md  Learning Python.md  hello-world.md  introduction-to-interpreters.md  learning-python.md
scripts/: generate_posts.ts
src/: app.d.ts  app.html  main.rs  models.py  models.rs  routes.rs  run.py  templates.rs  utils.py
src/lib/: posts.ts  repositories.ts  urls.ts
src/posts/: learning-python.md
src/router/: routes.rs
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/templates/: about.html  about.rs  base.html  blog.rs  contact.html  contact.rs  index.html  index.rs  layout.rs  pages.rs  post.html  posts.rs
static/: posts.json
static/css/: code.css
(+28 files in other folders)
