[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
maud = { version = "0.26.0", features = ["rocket"] }
pulldown-cmark = "0.12.2"
rocket = "0.5.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
