[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4.38", features = ["serde"] }
hyper = "1.5.1"
maud = { version = "0.26.0", features = ["rocket"] }
pulldown-cmark = "0.12.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs"] }
